examples/test/testpolicy5467.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5467
  namespace: namespace93
spec:
  podSelector:
    matchLabels:
      key47: value9
      key21: value3
      key33: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value37
          key40: value3
          key28: value28
      podSelector:
        matchLabels:
          key48: value2
